bugfix for splash image not showing on mobile and adjusted footer logos layout

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1122,4 +1122,9 @@ li.ant-select-search.ant-select-search--inline {
   .ant-tabs-nav-wrap {
     margin: 0
   }
+
+  /* Footer */
+  .footer-container {
+    flex-direction: column;
+  }
 }
